--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,35 @@
 version: "3.7"
 
 services:
+  database:
+    container_name: database
+    image: postgres:14.2-alpine
+    depends_on:
+      - flask
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=projectsmoothies
+    networks:
+      - app-network
+
   flask:
+    container_name: flask
     image: bila9630/dbflask
     build:
       context: ./Application
     ports:
       - 5001:5001
+    networks:
+      - app-network
+  
+  frontend:
+    container_name: frontend
+    image: bila9630/frontend
+    build:
+      context: ./Frontend
+    ports:
+      - 3000:3000
     networks:
       - app-network
 
