--- a/Application/requirements.txt
+++ b/Application/requirements.txt
@@ -1,12 +1,18 @@
 aniso8601==9.0.1
-click==8.0.4
+click==8.1.3
 colorama==0.4.4
-Flask==2.0.3
+Flask==2.1.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
-itsdangerous==2.1.0
-Jinja2==3.0.3
-MarkupSafe==2.1.0
-pytz==2021.3
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+psycopg2-binary==2.9.3
+pytz==2022.1
 six==1.16.0
-Werkzeug==2.0.3
+SQLAlchemy==1.4.36
+Werkzeug==2.1.2
+zipp==3.8.0
