--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-query": "^3.39.0"
+    "react-query": "^3.39.0",
+    "recharts": "^2.1.10"
   },
   "devDependencies": {
     "eslint": "8.14.0",
