--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,8 +16,7 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-query": "^3.39.0",
-    "recharts": "^2.1.10"
+    "react-query": "^3.39.0"
   },
   "devDependencies": {
     "eslint": "8.14.0",
