--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
+    "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
